# Crystal-Swirl

./: .gitignore  CMakeLists.txt  License.txt  README.md  main.cpp
documentation/html/: _action_forwarder_8cpp.html  _action_forwarder_8cpp_source.html  _action_forwarder_8hpp.html  _action_forwarder_8hpp_source.html  _audio_manager_8cpp.html  _audio_manager_8cpp_source.html  _audio_manager_8hpp.html  _audio_manager_8hpp_source.html  _cache_8hpp.html  _cache_8hpp_source.html  _clickable_8hpp.html  _clickable_8hpp_source.html  _component_8hpp.html  _component_8hpp_source.html  _config_8hpp_source.html  _config_src_8hpp.html  _config_src_8hpp_source.html  _entity_8hpp.html  _entity_8hpp_source.html  _function_pointer_wrapper__t_8hpp.html  _function_pointer_wrapper__t_8hpp_source.html  _game_8cpp.html  _game_8cpp_source.html  _game_8hpp.html  _game_8hpp_source.html  _game_state_8cpp.html  _game_state_8cpp_source.html  _game_state_8hpp.html  _game_state_8hpp_source.html  _graphic_manager_8cpp.html  _graphic_manager_8cpp_source.html  _graphic_manager_8hpp.html  _graphic_manager_8hpp_source.html  _loader_8cpp.html  _loader_8cpp_source.html  _loader_8hpp.html  _loader_8hpp_source.html  _logger_8cpp.html  _logger_8cpp_source.html  _logger_8hpp.html  (+124 more)
documentation/latex/: _action_forwarder_8cpp.tex  _action_forwarder_8hpp.tex  _audio_manager_8cpp.tex  _audio_manager_8hpp.tex  _cache_8hpp.tex  _clickable_8hpp.tex  _component_8hpp.tex  _config_src_8hpp.tex  _entity_8hpp.tex  _function_pointer_wrapper__t_8hpp.tex  (+82 more)
source/: Config.hpp  ConfigSrc.hpp  Math.hpp  log.txt  main.cpp
(+125 files in other folders)
